--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
   	"mongodb" : "> 1.1.10",
     "express" : ">= 4.4.4",
     "body-parser": "> 1.0.0",
-    "method-override": "> 1.0.0"
+    "method-override": "> 1.0.0",
+    "ejs": ">=1.0.0",
+    "static-favicon": "~1.0.0",
+    "morgan": "~1.0.0",
+    "debug": "~0.7.4",
+    "cookie-parser": "~1.0.1"
   },
 
   "devDependencies": {},
