--- a/package.json
+++ b/package.json
@@ -9,29 +9,27 @@
     "application",
     "openshift"
   ],
-
   "repository": {
     "type": "git",
     "url": "https://gitub.com/openshift-quickstart/openshift-mongo-node-express-example"
   },
-
   "engines": {
     "node": ">= 0.10.0",
     "npm": ">= 1.0.0"
   },
-
   "dependencies": {
-  	"mongodb" : "> 1.1.10",
-    "express" : ">= 4.4.4",
     "body-parser": "> 1.0.0",
-    "method-override": "> 1.0.0",
-    "ejs": ">=1.0.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
+    "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
-    "cookie-parser": "~1.0.1"
+    "ejs": ">=1.0.0",
+    "express": ">= 4.4.4",
+    "less": "^1.7.4",
+    "less-middleware": "^1.0.3",
+    "method-override": "> 1.0.0",
+    "mongodb": "> 1.1.10",
+    "morgan": "~1.0.0",
+    "static-favicon": "~1.0.0"
   },
-
   "devDependencies": {},
   "bundleDependencies": [],
   "private": true,
