--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
-    "body-parser": "> 1.0.0",
-    "cookie-parser": "~1.0.1",
+    "body-parser": "^1.9.1",
+    "cookie-parser": "^1.0.1",
     "debug": "~0.7.4",
     "ejs": ">=1.0.0",
     "express": ">= 4.4.4",
+    "express-session": "^1.9.1",
     "less": "^1.7.4",
     "less-middleware": "^1.0.3",
     "method-override": "> 1.0.0",
