--- a/package.json
+++ b/package.json
@@ -25,18 +25,12 @@
     "ejs": ">=1.0.0",
     "express": ">= 4.4.4",
     "express-session": "^1.9.1",
-    "less": "^1.7.4",
-    "less-middleware": "^1.0.3",
     "method-override": "> 1.0.0",
     "mongodb": "~ 2.0",
     "morgan": "~1.0.0",
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
-    "serve-favicon": "~2.2",
-    "flux": "^2.0.0",
-    "keymirror": "~0.1.0",
-    "object-assign": "^1.0.0",
-    "react": "^0.12.0"
+    "serve-favicon": "~2.2"
   },
   "devDependencies": {
     "browserify": "^6.2.0",
@@ -50,7 +44,13 @@
     "react-router": "^0.11.6",
     "reactify": "^0.15.2",
     "uglify-js": "~2.4.15",
-    "watchify": "^2.2.1"
+    "watchify": "^2.2.1",
+    "flux": "^2.0.0",
+    "keymirror": "~0.1.0",
+    "object-assign": "^1.0.0",
+    "react": "^0.12.0",
+    "less": "^1.7.4",
+    "less-middleware": "^1.0.3"
   },
   "scripts": {
     "watch": "watchify public/js/app.js -o public/js/bundle.js -v -d",
